--- a/lobby.html
+++ b/lobby.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>History Surfers | Multiplayer Lobby</title>
+    <title>Sảnh chờ</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Baloo+2:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="js/network.js"></script>
+    <script type="module" src="js/network.js"></script>
     <link rel="stylesheet" href="styles/lobby.style.css" />
   </head>
   <body>
@@ -233,7 +233,7 @@
       <!-- Waiting Room -->
       <div id="waitingRoom" class="hidden">
         <!-- Room Code Card -->
-        <div class="card">
+        <div class="card-lobby">
           <div class="room-code-display">
             <div class="room-code-label">Mã phòng</div>
             <div class="room-code-value" id="displayRoomCode">ABCD12</div>
@@ -242,7 +242,7 @@
         </div>
 
         <!-- Players Card -->
-        <div class="card">
+        <div class="card-lobby">
           <div class="player-header">
             <div class="player-count">
               <span id="playerCount">0</span>
@@ -468,7 +468,7 @@
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
               <path d="M6 18L18 6M6 6l12 12"/>
             </svg>
-            Not Ready
+            Chưa sẵn sàng
           `;
           btn.className = 'btn btn-warning';
         } else {
@@ -476,7 +476,7 @@
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
               <path d="M5 13l4 4L19 7"/>
             </svg>
-            Ready
+            Sẵn sàng
           `;
           btn.className = 'btn btn-success';
         }
@@ -565,11 +565,8 @@
         if (rooms.length === 0) {
           browsePlayerNameGroup.classList.add('hidden');
           roomList.innerHTML = `
-            <div class="alert alert-info">
-              <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-              </svg>
-              <span>Hiện không có phòng nào đang mở. Tạo phòng mới nào!</span>
+            <div class="alert alert-error">
+              <span>Không có dữ liệu</span>
             </div>
           `;
         } else {
@@ -594,7 +591,7 @@
                 </svg>
                 ${room.playerCount}/${room.maxPlayers}
               </div>
-                </div>  
+                </div>
               </div>
 
             `;
