--- a/multiplayer.html
+++ b/multiplayer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>History Surfers | Multiplayer Race</title>
+    <title>Nhiều người chơi</title>
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
       rel="stylesheet"
