--- a/singleplayer.html
+++ b/singleplayer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>History Sufers | Single Player</title>
+    <title>Chơi đơn</title>
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
